--- a/pom.xml
+++ b/pom.xml
@@ -234,7 +234,7 @@
                                     <include>de.themoep.utils:*</include>
                                     <include>net.kyori:*</include>
                                     <include>org.bstats:*</include>
-                                    <include>net.gravitydevelopment.updater</include>
+                                    <include>com.griefcraft</include>
                                     <include>com.j256.ormlite</include>
                                     <include>javax.persistence</include>
                                 </includes>
